# thi-introprj

./: .gitignore  LICENSE  package.json
bot/: Dockerfile  app.py  case_insensitive_adapter.py  charlie.py  hybrid.py  pyproject.toml
cai-bot/: .dockerignore  charlie.py  create_app.py  docker-compose.yml
cai-bot/bot/: app.py  charlie.py  create_app.py  gunicorn.conf.py
cai-bot/client/: Dockerfile  package.json  vite.config.ts
cai-bot/client/src/: AboutView.vue  App.vue  Chat.vue  ChatView.vue  MainNav.vue  main.ts
cai-bot/client/src/assets/styles/: index.css
cai-bot/client/src/components/: Chat.vue
cai-bot/training/: bigData.json  test.txt
cai-bot/web/: Dockerfile  charlie.html  logic.js  site.conf
client/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.json
client/src/: App.vue  Chat.vue
client/src/router/: router.ts
training/: ai.json  bigData.json  common.json  cybersecurity.json  dsa.json  machineLearning.json  swe.json
